#1830: agents.md file modified" (#570)
* #1830: Merge release v1.4.1-rc.1 changes into develop and version bump to 1.5.0-SNAPSHOT

- Merged all release tag (v1.4.1-rc.1) Java source changes into develop:
  performance tuning (ZGC, HSM, crypto, partner cert, signature, ZK crypto)
- Updated pom versions: 1.2.1-SNAPSHOT → 1.5.0-SNAPSHOT (modules),
  kernel deps → 1.3.1-SNAPSHOT
- Helm: updated resource limits (CPU 2000m/8000Mi), ZGC javaOpts from release;
  kept Chart.yaml versions at 0.0.1-develop
- DB: restored db_upgrade_scripts (1.2.0.1→1.4.1); kept MOSIP-37808 db_scripts changes
- Added CLAUDE.md for project context

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* #1830: agents.md file modified

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>

---------

Signed-off-by: nagendra0721 <nagendra0718@gmail.com>
Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>